[gd_scene load_steps=27 format=4 uid="uid://b0omfelsiothx"]

[ext_resource type="Script" uid="uid://caugelxhwlvl0" path="res://Scripts/Parts/LostLevelsEnding.gd" id="1_qmhaw"]
[ext_resource type="JSON" path="res://Assets/Audio/BGM/Ending.json" id="2_k7rel"]
[ext_resource type="SpriteFrames" uid="uid://df4enjjl84mji" path="res://Resources/SpriteFrames/Player/Mario/Small.tres" id="4_fxsfu"]
[ext_resource type="Script" uid="uid://b08qfwj5jk6g1" path="res://Scripts/Parts/PlayerSprite.gd" id="4_tkq3a"]
[ext_resource type="JSON" path="res://Assets/Sprites/Backgrounds/Bushes/Bush.json" id="4_xoqts"]
[ext_resource type="Texture2D" uid="uid://dkjam0jo2k2m0" path="res://Assets/Sprites/Backgrounds/Bushes/CastleBushNight.png" id="5_wr0ye"]
[ext_resource type="PackedScene" uid="uid://cinr6kcbmo6gr" path="res://Scenes/Parts/DropShadowRenderer.tscn" id="6_g1x38"]
[ext_resource type="FontVariation" uid="uid://djxdgxy1iv8yv" path="res://Resources/ThemedResources/FontLLMain.tres" id="9_1flm1"]
[ext_resource type="Texture2D" uid="uid://boivfkpqvnx45" path="res://Assets/Sprites/Players/Peach.png" id="10_1flm1"]
[ext_resource type="PackedScene" uid="uid://bksxgpygrdjl7" path="res://Scenes/Prefabs/LevelBG.tscn" id="10_iab5g"]
[ext_resource type="JSON" path="res://Assets/Sprites/Players/PeachNPC.json" id="11_ecp1v"]
[ext_resource type="Texture2D" uid="uid://fdn41mmtnhdt" path="res://Assets/Sprites/Players/ToadNPCLL.png" id="11_iab5g"]
[ext_resource type="Texture2D" uid="uid://cnxudoanlx4ua" path="res://Assets/Sprites/Tilesets/LLEnding.png" id="11_xoqts"]
[ext_resource type="Script" uid="uid://cbal8ms2oe1ik" path="res://Scripts/Classes/Components/ResourceSetterNew.gd" id="13_k7rel"]
[ext_resource type="JSON" path="res://Assets/Sprites/Players/ToadNPC.json" id="14_ecp1v"]

[sub_resource type="Animation" id="Animation_xoqts"]
resource_name = "Appear"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text2/PeaceIsPaved:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Text2/Hurrah:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Text2/PointsAdded:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Text2/KingdomSaved:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Text2/Hero:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Text2/EndsTrip:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Text2/LongFriendship:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Text2/ForEachLife:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_wr0ye"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text2/PeaceIsPaved:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Text2/Hurrah:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Text2/PointsAdded:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Text2/KingdomSaved:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Text2/Hero:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Text2/EndsTrip:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Text2/LongFriendship:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Text2/ForEachLife:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k7rel"]
_data = {
&"Appear": SubResource("Animation_xoqts"),
&"RESET": SubResource("Animation_wr0ye")
}

[sub_resource type="Animation" id="Animation_ecp1v"]
resource_name = "Main"
length = 50.0
tracks/0/type = "animation"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextAnimation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": PackedStringArray("Appear"),
"times": PackedFloat32Array(3)
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(13.0333, 21.0667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"tally_score"
}, {
"args": [],
"method": &"show_toads"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ThankYou:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 20),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Text2:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 20, 20.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DropShadow:force_colour")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 20.2333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["Light", "Dark"]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("DayBG:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(20.010435, 20.500002),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1flm1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ThankYou:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Text2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DropShadow:force_colour")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Light"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DayBG:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3n3sl"]
_data = {
&"Main": SubResource("Animation_ecp1v"),
&"RESET": SubResource("Animation_1flm1")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_xoqts"]
atlas = ExtResource("11_iab5g")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wr0ye"]
atlas = ExtResource("11_iab5g")
region = Rect2(48, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_k7rel"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xoqts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wr0ye")
}],
"loop": true,
"name": &"Emote",
"speed": 5.0
}]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wr0ye"]
texture = ExtResource("11_xoqts")
4:5/0 = 0
4:6/0 = 0
5:6/0 = 0
5:7/0 = 0
5:5/0 = 0
4:7/0 = 0

[sub_resource type="TileSet" id="TileSet_k7rel"]
sources/0 = SubResource("TileSetAtlasSource_wr0ye")

[node name="LostLevelsEnding" type="Node"]
script = ExtResource("1_qmhaw")
music = ExtResource("2_k7rel")
theme = "Castle"
campaign = "SMBLL"
world_id = 8
level_id = 4
metadata/_custom_type_script = "uid://bcqr1v25ygedb"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -88)
process_callback = 0

[node name="DayBG" parent="." instance=ExtResource("10_iab5g")]
modulate = Color(1, 1, 1, 0)
primary_layer = 1

[node name="TopEdge" parent="DayBG/PrimaryLayer" index="2"]
color = Color(0, 0, 0, 0)

[node name="LevelBG" parent="." instance=ExtResource("10_iab5g")]
time_of_day = 1
primary_layer = 1

[node name="ResourceSetter" parent="LevelBG/PrimaryLayer/Bush" index="0"]
process_mode = 3
force_properties = {
"Time": "Night"
}

[node name="ResourceSetter2" type="Node" parent="LevelBG/PrimaryLayer/Bush" index="1" node_paths=PackedStringArray("node_to_affect")]
process_mode = 3
script = ExtResource("13_k7rel")
node_to_affect = NodePath("..")
property_name = "texture"
mode = 1
resource_json = ExtResource("4_xoqts")
force_properties = {
"Time": "Night"
}
metadata/_custom_type_script = "uid://cbal8ms2oe1ik"

[node name="Bush2" type="Sprite2D" parent="LevelBG/PrimaryLayer" index="2"]
process_mode = 1
position = Vector2(0, -512)
texture = ExtResource("5_wr0ye")
centered = false

[node name="TopEdge" parent="LevelBG/PrimaryLayer" index="3"]
color = Color(0, 0, 0, 0)

[node name="Node2D" type="Node2D" parent="."]

[node name="PlayerSprite" type="AnimatedSprite2D" parent="Node2D" node_paths=PackedStringArray("resource_setter")]
sprite_frames = ExtResource("4_fxsfu")
animation = &"Idle"
offset = Vector2(0, 1)
script = ExtResource("4_tkq3a")
resource_setter = NodePath("ResourceSetterNew")
metadata/_custom_type_script = "uid://b08qfwj5jk6g1"

[node name="ResourceSetterNew" type="Node" parent="Node2D/PlayerSprite"]
script = ExtResource("13_k7rel")
metadata/_custom_type_script = "uid://cbal8ms2oe1ik"

[node name="DropShadow" parent="." instance=ExtResource("6_g1x38")]
z_as_relative = false

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="TextAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_k7rel")
}
speed_scale = 0.5

[node name="MainSequence" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3n3sl")
}
autoplay = "Main"

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(16, -16)
texture = ExtResource("10_1flm1")
region_rect = Rect2(0, 0, 16, 32)

[node name="ResourceSetterNew" type="Node" parent="Sprite2D2" node_paths=PackedStringArray("node_to_affect")]
script = ExtResource("13_k7rel")
node_to_affect = NodePath("..")
property_name = "texture"
mode = 1
resource_json = ExtResource("11_ecp1v")
metadata/_custom_type_script = "uid://cbal8ms2oe1ik"

[node name="ThankYou" type="Label" parent="."]
visible = false
visibility_layer = 2
offset_left = -128.0
offset_top = -152.0
offset_right = 128.0
offset_bottom = -136.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "CUTSCENE_CASTLE_PEACH_1"
horizontal_alignment = 1
uppercase = true

[node name="Text2" type="Node2D" parent="."]

[node name="PeaceIsPaved" type="Label" parent="Text2"]
visible = false
visibility_layer = 2
offset_left = -128.0
offset_top = -144.0
offset_right = 128.0
offset_bottom = -128.0
theme_override_colors/font_color = Color(0.160784, 0.807843, 1, 1)
theme_override_colors/font_shadow_color = Color(0.054902, 0.109804, 0.643137, 1)
theme_override_fonts/font = ExtResource("9_1flm1")
text = "CUTSCENE_LL_PEACH_1"
horizontal_alignment = 1
uppercase = true

[node name="KingdomSaved" type="Label" parent="Text2"]
visible = false
visibility_layer = 2
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = -112.0
theme_override_colors/font_color = Color(0.160784, 0.807843, 1, 1)
theme_override_colors/font_shadow_color = Color(0.054902, 0.109804, 0.643137, 1)
theme_override_fonts/font = ExtResource("9_1flm1")
text = "CUTSCENE_LL_PEACH_2"
horizontal_alignment = 1
uppercase = true
visible_characters_behavior = 1

[node name="Hurrah" type="Label" parent="Text2"]
visible = false
visibility_layer = 2
offset_left = -128.0
offset_top = -112.0
offset_right = 128.0
offset_bottom = -96.0
theme_override_colors/font_color = Color(0.160784, 0.807843, 1, 1)
theme_override_colors/font_shadow_color = Color(0.054902, 0.109804, 0.643137, 1)
theme_override_fonts/font = ExtResource("9_1flm1")
text = "hurrah to  mario"
horizontal_alignment = 1
uppercase = true

[node name="Hero" type="Label" parent="Text2"]
visible = false
visibility_layer = 2
offset_left = -128.0
offset_top = -96.0
offset_right = 128.0
offset_bottom = -80.0
theme_override_colors/font_color = Color(0.160784, 0.807843, 1, 1)
theme_override_colors/font_shadow_color = Color(0.054902, 0.109804, 0.643137, 1)
theme_override_fonts/font = ExtResource("9_1flm1")
text = "our only hero"
horizontal_alignment = 1
uppercase = true

[node name="EndsTrip" type="Label" parent="Text2"]
visible = false
visibility_layer = 2
offset_left = -128.0
offset_top = -80.0
offset_right = 128.0
offset_bottom = -64.0
theme_override_colors/font_color = Color(0.160784, 0.807843, 1, 1)
theme_override_colors/font_shadow_color = Color(0.054902, 0.109804, 0.643137, 1)
theme_override_fonts/font = ExtResource("9_1flm1")
text = "CUTSCENE_LL_PEACH_5"
horizontal_alignment = 1
uppercase = true

[node name="LongFriendship" type="Label" parent="Text2"]
visible = false
visibility_layer = 2
offset_left = -128.0
offset_top = -64.0
offset_right = 128.0
offset_bottom = -48.0
theme_override_colors/font_color = Color(0.160784, 0.807843, 1, 1)
theme_override_colors/font_shadow_color = Color(0.054902, 0.109804, 0.643137, 1)
theme_override_fonts/font = ExtResource("9_1flm1")
text = "CUTSCENE_LL_PEACH_6"
horizontal_alignment = 1
uppercase = true

[node name="PointsAdded" type="Label" parent="Text2"]
visible = false
visibility_layer = 2
offset_left = -128.0
offset_top = -48.0
offset_right = 128.0
offset_bottom = -32.0
theme_override_colors/font_color = Color(1, 0.666667, 0.278431, 1)
theme_override_colors/font_shadow_color = Color(0.47451, 0.47451, 0.47451, 1)
theme_override_fonts/font = ExtResource("9_1flm1")
text = "CUTSCENE_LL_PEACH_7"
horizontal_alignment = 1
uppercase = true

[node name="ForEachLife" type="Label" parent="Text2"]
visible = false
visibility_layer = 2
offset_left = -128.0
offset_top = -40.0
offset_right = 128.0
offset_bottom = -24.0
theme_override_colors/font_color = Color(1, 0.666667, 0.278431, 1)
theme_override_colors/font_shadow_color = Color(0.47451, 0.47451, 0.47451, 1)
theme_override_fonts/font = ExtResource("9_1flm1")
text = "CUTSCENE_LL_PEACH_8"
horizontal_alignment = 1
uppercase = true

[node name="Toads" type="Node" parent="."]

[node name="1" type="AnimatedSprite2D" parent="Toads"]
visible = false
position = Vector2(-88, -16)
sprite_frames = SubResource("SpriteFrames_k7rel")
animation = &"Emote"
autoplay = "Emote"
offset = Vector2(0, 1)

[node name="ResourceSetterNew" type="Node" parent="Toads/1" node_paths=PackedStringArray("node_to_affect")]
script = ExtResource("13_k7rel")
node_to_affect = NodePath("..")
property_name = "sprite_frames"
resource_json = ExtResource("14_ecp1v")
metadata/_custom_type_script = "uid://cbal8ms2oe1ik"

[node name="2" type="AnimatedSprite2D" parent="Toads"]
visible = false
position = Vector2(-64, -16)
sprite_frames = SubResource("SpriteFrames_k7rel")
animation = &"Emote"
autoplay = "Emote"
offset = Vector2(0, 1)

[node name="ResourceSetterNew" type="Node" parent="Toads/2" node_paths=PackedStringArray("node_to_affect")]
script = ExtResource("13_k7rel")
node_to_affect = NodePath("..")
property_name = "sprite_frames"
resource_json = ExtResource("14_ecp1v")
metadata/_custom_type_script = "uid://cbal8ms2oe1ik"

[node name="3" type="AnimatedSprite2D" parent="Toads"]
visible = false
position = Vector2(-40, -16)
sprite_frames = SubResource("SpriteFrames_k7rel")
animation = &"Emote"
autoplay = "Emote"
offset = Vector2(0, 1)

[node name="ResourceSetterNew" type="Node" parent="Toads/3" node_paths=PackedStringArray("node_to_affect")]
script = ExtResource("13_k7rel")
node_to_affect = NodePath("..")
property_name = "sprite_frames"
resource_json = ExtResource("14_ecp1v")
metadata/_custom_type_script = "uid://cbal8ms2oe1ik"

[node name="4" type="AnimatedSprite2D" parent="Toads"]
visible = false
position = Vector2(-16, -16)
sprite_frames = SubResource("SpriteFrames_k7rel")
animation = &"Emote"
autoplay = "Emote"
offset = Vector2(0, 1)

[node name="ResourceSetterNew" type="Node" parent="Toads/4" node_paths=PackedStringArray("node_to_affect")]
script = ExtResource("13_k7rel")
node_to_affect = NodePath("..")
property_name = "sprite_frames"
resource_json = ExtResource("14_ecp1v")
metadata/_custom_type_script = "uid://cbal8ms2oe1ik"

[node name="5" type="AnimatedSprite2D" parent="Toads"]
visible = false
position = Vector2(40, -16)
sprite_frames = SubResource("SpriteFrames_k7rel")
animation = &"Emote"
autoplay = "Emote"
offset = Vector2(0, 1)

[node name="ResourceSetterNew" type="Node" parent="Toads/5" node_paths=PackedStringArray("node_to_affect")]
script = ExtResource("13_k7rel")
node_to_affect = NodePath("..")
property_name = "sprite_frames"
resource_json = ExtResource("14_ecp1v")
metadata/_custom_type_script = "uid://cbal8ms2oe1ik"

[node name="6" type="AnimatedSprite2D" parent="Toads"]
visible = false
position = Vector2(64, -16)
sprite_frames = SubResource("SpriteFrames_k7rel")
animation = &"Emote"
autoplay = "Emote"
offset = Vector2(0, 1)

[node name="ResourceSetterNew" type="Node" parent="Toads/6" node_paths=PackedStringArray("node_to_affect")]
script = ExtResource("13_k7rel")
node_to_affect = NodePath("..")
property_name = "sprite_frames"
resource_json = ExtResource("14_ecp1v")
metadata/_custom_type_script = "uid://cbal8ms2oe1ik"

[node name="7" type="AnimatedSprite2D" parent="Toads"]
visible = false
position = Vector2(88, -16)
sprite_frames = SubResource("SpriteFrames_k7rel")
animation = &"Emote"
autoplay = "Emote"
offset = Vector2(0, 1)

[node name="ResourceSetterNew" type="Node" parent="Toads/7" node_paths=PackedStringArray("node_to_affect")]
script = ExtResource("13_k7rel")
node_to_affect = NodePath("..")
property_name = "sprite_frames"
resource_json = ExtResource("14_ecp1v")
metadata/_custom_type_script = "uid://cbal8ms2oe1ik"

[node name="Parallax2D" type="Parallax2D" parent="."]
z_index = -50
repeat_size = Vector2(256, 512)
repeat_times = 8

[node name="TileMapLayer" type="TileMapLayer" parent="Parallax2D"]
tile_map_data = PackedByteArray("AAD4/wAAAAAFAAUAAAD5/wAAAAAEAAUAAAD6/wAAAAAFAAUAAAD7/wAAAAAEAAUAAAD8/wAAAAAFAAUAAAD9/wAAAAAEAAUAAAD+/wAAAAAFAAUAAAD//wAAAAAEAAUAAAAAAAAAAAAFAAUAAAABAAAAAAAEAAUAAAACAAAAAAAFAAUAAAADAAAAAAAEAAUAAAAEAAAAAAAFAAUAAAAFAAAAAAAEAAUAAAAGAAAAAAAFAAUAAAAHAAAAAAAEAAUAAAD4/wEAAAAFAAYAAAD5/wEAAAAEAAYAAAD6/wEAAAAFAAYAAAD7/wEAAAAEAAYAAAD8/wEAAAAFAAYAAAD9/wEAAAAEAAYAAAD+/wEAAAAFAAYAAAD//wEAAAAEAAYAAAAAAAEAAAAFAAYAAAABAAEAAAAEAAYAAAACAAEAAAAFAAYAAAADAAEAAAAEAAYAAAAEAAEAAAAFAAYAAAAFAAEAAAAEAAYAAAAGAAEAAAAFAAYAAAAHAAEAAAAEAAYAAAA=")
tile_set = SubResource("TileSet_k7rel")

[editable path="DayBG"]
[editable path="LevelBG"]
